# miningsim

./: CMakeLists.txt  Dockerfile  README.md
src/: miningsim.cpp  simulation.cpp  simulation.h  stations.cpp  stations.h  timerservice.cpp  timerservice.h  truck.cpp  truck.h
test/: CMakeLists.txt  test_stations.cpp  test_timerservice.cpp  test_trucks.cpp
